unpackaged/main/default/objects/SBQQ__PricingGuidanceTier__c/fields/SBQQ__NormDiscount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__NormDiscount__c</fullName>
    <description>Middle-range discount based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&#39;s approval settings.</description>
    <inlineHelpText>Remise moyenne basée sur les ventes passées. Si un commercial souhaite utiliser ce prix, il doit appliquer la remise de la ligne de devis manuellement. Cette remise peut nécessiter des approbations en fonction des paramètres d&#39;approbation de votre organisation.</inlineHelpText>
    <label>Norm Discount (%)</label>
    <precision>14</precision>
    <scale>10</scale>
    <type>Percent</type>
</CustomField>