unpackaged/main/default/objects/SBQQ__PricingGuidanceTier__c/fields/SBQQ__UpperBound__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpperBound__c</fullName>
    <description>The highest quote line quantity that applies to this tier. This number must be one above the highest quantity that you want this tier to include.</description>
    <inlineHelpText>La quantité de ligne de devis la plus élevée qui s&#39;applique à ce niveau. Ce nombre doit être supérieur à la quantité la plus élevée que vous souhaitez inclure dans ce niveau.</inlineHelpText>
    <label>Upper Bound</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>